--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "core-js": "^3.29.0",
+    "loanjs": "^1.1.2",
     "pinia": "^2.1.6",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
