--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@vue/cli": "^5.0.8",
     "core-js": "^3.29.0",
     "loanjs": "^1.1.2",
     "pinia": "^2.1.6",
